# svf

./: .dockerignore  Dockerfile
arduino/camera/: camera.ino
arduino/camera-test/: .gitignore  Cargo.toml
arduino/camera-test/src/: main.rs
arduino/controller/: controller.ino
strawberry-server/: detect.py
svf/: .firebaserc  .gitignore  electron-builder.json  firebase.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
svf-server/: Cargo.toml  svf.db
svf-server/src/: app.rs  lib.rs  login.rs  main.rs  service.rs  signup.rs  utils.rs  wait_pool.rs  web_server.rs
svf-server/src/service/: authentication_service.rs  db_service.rs  farm_service.rs
svf-server/src/service/farm_service/: client.rs  packet.rs  server.rs
svf-server/src/utils/: buffer_reader.rs  buffer_writer.rs
svf/src/electron/: main.ts  util.ts
svf/src/ui/: App.vue  berry.ts  main.ts  router.ts  shims-vue.d.ts  style.css
svf/src/ui/components/: AppNavBar.vue  DeviceNavBar.vue  FormButton.vue  FormContainer.vue  GoogleButton.vue  InputField.vue  NavBar.vue  Seperator.vue  TOSAgreement.vue
svf/src/ui/views/: AppView.vue  DeviceView.vue  HomeView.vue  LoginView.vue  LogoutView.vue  NotFoundView.vue  PrivacyView.vue  SignUpView.vue  TOSView.vue
